# solmate-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  readme.md  tasks.py
docs/: conf.py  index.rst
examples/: .gitignore  addNewInjectionProfile.py  hello.py  online.py  requirements.txt  sol2csv.py  sol2csvfile.py  sol2log.py  sol2mqtt.py  talk2solmate.py  talk2solmatelocally.py
solmate_sdk/: __init__.py  apiclient.py  async_apiclient.py  connection.py  sync_apiclient.py  tests.py  utils.py
tests/: async_sol_client_test.py  sync_sol_client_test.py
